# Opt_Robot

./: .gitignore  CMakeLists.txt  README.md
robots/: pendulum.xml
src/: main.cpp
src/interfaces/: IOptimizer.h  IPhysicsEngine.h  IProblem.h
src/optimization/genetic/: GeneticAlgorithm.cpp  GeneticAlgorithm.h
src/optimization/random_search/: RandomSearch.cpp  RandomSearch.h
src/optimization/simulated_annealing/: SimulatedAnnealing.cpp  SimulatedAnnealing.h
src/physics/mujoco/: MuJoCoEngine.cpp  MuJoCoEngine.h
src/problems/swingup/: SwingUpProblem.cpp  SwingUpProblem.h
src/viewer/: MuJoCoViewer.cpp  MuJoCoViewer.h
